[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/UI_Square.png" type="Texture" id=1]
[ext_resource path="res://Font/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Font/Roboto-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="UI" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="."]
self_modulate = Color( 0.203922, 0.196078, 0.219608, 1 )
anchor_left = 16.316
anchor_top = 17.954
anchor_right = 16.316
anchor_bottom = 17.954
margin_left = -116.561
margin_top = -81.16
margin_right = 133.439
margin_bottom = -21.16
texture = ExtResource( 1 )
expand = true

[node name="LevelBG" type="TextureRect" parent="BG"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 9.14539
margin_top = -49.823
margin_right = 49.1454
margin_bottom = -9.823
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelText" type="Label" parent="BG/LevelBG"]
self_modulate = Color( 0.203922, 0.196078, 0.219608, 1 )
margin_right = 39.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="HealthBar" type="TextureProgress" parent="BG"]
anchor_right = 1.683
margin_left = 61.0
margin_top = 8.0
margin_right = -178.75
margin_bottom = 36.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
tint_under = Color( 0.203922, 0.196078, 0.219608, 1 )
tint_progress = Color( 0.905882, 0.121569, 0.0627451, 1 )
nine_patch_stretch = true

[node name="XpBar" type="TextureProgress" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 62.0
margin_top = 43.0
margin_right = -8.0
margin_bottom = -7.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
tint_under = Color( 0.203922, 0.196078, 0.219608, 1 )
tint_progress = Color( 0.156863, 0.917647, 0.0705882, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldText" type="Label" parent="BG"]
margin_top = -16.0
margin_right = 249.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 2 )
align = 1
